--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
     "dependencies": {
         "dotenv": "^8.2.0",
         "express": "^4.17.1",
+        "heroku": "^7.47.7",
         "joi": "^17.3.0",
-        "mongoose": "^5.11.7"
+        "mongoose": "^5.11.7",
+        "node": "^15.4.0"
     },
     "devDependencies": {
         "nodemon": "^2.0.6"
