--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
         "dotenv": "^8.2.0",
         "express": "^4.17.1",
         "heroku": "^7.47.7",
+        "heroku-cli": "^7.0.9",
         "joi": "^17.3.0",
         "mongoose": "^5.11.7",
         "node": "^15.4.0"
